Applying Rotation or Scale change object position if parent-child relation has more two nesting levels #66525

Closed
opened 2019-07-07 13:50:22 +02:00 by Ivan Vostrikov · 5 comments

{F7571589}System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce 920M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.81

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: 699193713f
Worked: 2.79b

Short description of error
Applying Rotation or Scale change object position if parent-child relation has more two nesting levels.
If apply rotation or scale on the parent only, it's works fine. But if select all objects and apply rotation or scale for them objects will moved.

Exact steps for others to reproduce the error

  • Open "Apply_Transform_Bug.blend"
  • Select All
  • Ctrl + A -> Apply Rotation or Apply Scale
{[F7571589](https://archive.blender.org/developer/F7571589/Apply_Transform_Bug.blend)}**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce 920M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.81 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: `699193713f` Worked: 2.79b **Short description of error** Applying Rotation or Scale change object position if parent-child relation has more two nesting levels. If apply rotation or scale on the parent only, it's works fine. But if select all objects and apply rotation or scale for them objects will moved. **Exact steps for others to reproduce the error** - Open "Apply_Transform_Bug.blend" - Select All - Ctrl + A -> Apply Rotation or Apply Scale
Author

Added subscriber: @IvanVostrikov

Added subscriber: @IvanVostrikov
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2019-07-08 11:33:19 +02:00
Member

Seems like 26d4a2a516 wasnt enough...
@Sergey: mind looking at this (again)?

Seems like 26d4a2a516 wasnt enough... @Sergey: mind looking at this (again)?

This issue was referenced by d6ebd04bb3

This issue was referenced by d6ebd04bb308c7bea8414ed911bc3d7e0bb2d2ea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66525
No description provided.