Fix T66525: Wrong apply scale for children chain

The operator did not behave correct when there was a chain of parents
longer than 1.